<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fetchNewRequestResponse"
            type="com.incon.service.apimodel.components.fetchnewrequest.FetchNewRequestResponse" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_return_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_selector"
        android:padding="@dimen/margin_5">


        <RelativeLayout
            android:id="@+id/views_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_option_approval"
                android:layout_marginTop="@dimen/margin_25"
                android:id="@+id/brand_imageview"
                style="@style/image_product_icon" />

            <ImageView
                app:srcCompat="@drawable/ic_option_approval"
                android:layout_marginTop="@dimen/margin_25"
                android:id="@+id/product_imageview"
                style="@style/image_product_icon"
                android:layout_toRightOf="@id/brand_imageview" />

            <LinearLayout
                android:id="@+id/product_info_layout"
                style="@style/linear_layout_product_details"
                android:layout_toRightOf="@id/product_imageview">

                <TextView
                    style="@style/BothWrap"
                    android:text="@string/title_product_name"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/ebony_clay"
                    android:textSize="12.4sp" />


                <TextView
                    android:id="@+id/return_date"
                    style="@style/BothWrap"
                    android:text="@string/title_model_no"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@color/ebony_clay"
                    android:textSize="12.4sp" />

                <TextView
                    style="@style/BothWrap"
                    android:text="@string/title_complaint"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/ebony_clay"
                    android:textSize="12.4sp" />


                <TextView
                    style="@style/BothWrap"
                    android:text="@string/title_location"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@color/ebony_clay"
                    android:textSize="12.4sp" />



                <TextView
                    style="@style/BothWrap"
                    android:text="@string/title_warranty_status"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@color/ebony_clay"
                    android:textSize="12.4sp" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>