<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="upDateServiceCenter"
            type="com.incon.service.dto.updateservicecenter.UpDateServiceCenter" />

        <variable
            name="addServiceCenter"
            type="com.incon.service.dto.addservicecenter.AddServiceCenter" />

        <variable
            name="addServiceCenterActivity"
            type="com.incon.service.ui.addservicecenter.AddServiceCenterActivity" />

    </data>

    <RelativeLayout style="@style/BothMatch">

        <ScrollView
            android:id="@+id/scrollview_user_info"
            style="@style/BothMatch"
            android:background="@color/white"
            android:fadeScrollbars="false"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@drawable/scrollbar"
            android:scrollbars="vertical">

            <RelativeLayout style="@style/BothMatch">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />

                <!-- name -->
                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_name"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@+id/toolbar"
                    android:layout_marginTop="@dimen/margin_10"
                    android:hint="@string/register_name_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_name"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="0"
                        android:text="@={addServiceCenter.name}" />

                </com.incon.service.custom.view.CustomTextInputLayout>

                <!-- number -->
                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_number"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_name"
                    android:hint="@string/login_username_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_number"
                        style="@style/Add_new_model_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="@integer/character_limit_45"
                        android:maxLines="1"
                        android:tag="1"
                        android:text="@={addServiceCenter.contactNo}" />

                </com.incon.service.custom.view.CustomTextInputLayout>


                <!-- category-->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_category"
                    style="@style/spinnerItemStyle"
                    android:layout_below="@id/input_layout_number"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:focusable="true"
                    android:hint="@string/add_new__category"
                    android:tag="2"
                    android:text="@={addServiceCenter.categoryName}"
                    android:visibility="visible"
                    app:met_floatingLabel="highlight"
                    app:met_textColor="@color/colorForgotPasswordHintText"
                    app:met_textColorHint="@color/colorForgotPasswordHintText" />

                <!-- division no -->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_division"
                    style="@style/spinnerItemStyle"
                    android:layout_below="@id/spinner_category"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:focusable="true"
                    android:hint="@string/add_new__division"
                    android:tag="3"
                    android:text="@={addServiceCenter.divisionName}"
                    android:visibility="gone"
                    app:met_floatingLabel="highlight"
                    app:met_textColor="@color/colorForgotPasswordHintText"
                    app:met_textColorHint="@color/colorForgotPasswordHintText" />

                <!--brand-->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_brand"
                    style="@style/spinnerItemStyle"
                    android:layout_below="@id/spinner_division"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:focusable="true"
                    android:hint="@string/action_brand"
                    android:tag="4"
                    android:text="@={addServiceCenter.brandName}"
                    android:visibility="gone"
                    app:errorEnabled="true"
                    app:met_floatingLabel="highlight"
                    app:met_textColor="@color/colorForgotPasswordHintText"
                    app:met_textColorHint="@color/colorForgotPasswordHintText" />


                <!-- Email ID -->
                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_emailid"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/spinner_brand"
                    android:hint="@string/register_emailid_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_emailid"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="5"
                        android:text="@={addServiceCenter.email}" />
                </com.incon.service.custom.view.CustomTextInputLayout>

                <!-- Address -->
                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_address"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_emailid"
                    android:hint="@string/register_address_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_address"
                        style="@style/Register_TextInputEditText"
                        android:enabled="false"
                        android:tag="6"
                        android:text="@={addServiceCenter.address}" />
                </com.incon.service.custom.view.CustomTextInputLayout>

                <!--Dummy view used for click action-->
                <View
                    android:id="@+id/view_address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignBottom="@+id/input_layout_register_address"
                    android:layout_alignEnd="@+id/input_layout_register_address"
                    android:layout_alignStart="@+id/input_layout_register_address"
                    android:layout_alignTop="@+id/input_layout_register_address"
                    android:background="@null"
                    android:onClick="@{() -> addServiceCenterActivity.onAddressClick()}" />


                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_created_date"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_address"
                    android:hint="@string/created_date_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_created_date"
                        style="@style/Register_TextInputEditText"
                        android:enabled="false"
                        android:tag="7"
                        android:text="@={addServiceCenter.createdDate}" />
                </com.incon.service.custom.view.CustomTextInputLayout>
                <!-- dummy view for Offers start date selection -->
                <View
                    android:id="@+id/view_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignBottom="@+id/input_layout_created_date"
                    android:layout_alignEnd="@+id/input_layout_created_date"
                    android:layout_alignStart="@+id/input_layout_created_date"
                    android:layout_alignTop="@+id/input_layout_created_date"
                    android:background="@null"
                    android:onClick="@{() -> addServiceCenterActivity.onDateClick()}" />

                <!-- GSTN -->
                <com.incon.service.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_gstn"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_created_date"
                    android:hint="@string/register_gstn_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_gstn"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="8"
                        android:text="@={addServiceCenter.gstn}" />
                </com.incon.service.custom.view.CustomTextInputLayout>

                <Button
                    android:id="@+id/button_submit"
                    style="@style/w150_wrap"
                    fontPath="fonts/OpenSans-Bold.ttf"
                    android:layout_below="@+id/input_layout_register_gstn"
                    android:layout_marginBottom="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_110"
                    android:layout_marginTop="@dimen/margin_5"
                    android:background="@drawable/btn_login_register_roundedcorner"
                    android:onClick="@{() -> addServiceCenterActivity.onSubmitClick()}"
                    android:text="@string/add_new_submit"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_13" />

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</layout>
